--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-config-simplymadeapps",
-  "version": "1.1.6",
+  "version": "1.1.7",
   "description": "ESLint config for Simply Made Apps",
   "homepage": "https://github.com/simplymadeapps/eslint-config-simplymadeapps",
   "license": "MIT",
@@ -17,7 +17,7 @@
     "eslint-plugin-react": "^7.9.1",
     "eslint-plugin-sort-class-members": "^1.3.1",
     "eslint-plugin-unicorn": "^4.0.3",
-    "lodash": "4.17.14",
+    "lodash": "^4.17.14",
     "prettier": "^1.13.4"
   },
   "peerDependencies": {
