--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-config-simplymadeapps",
-  "version": "1.1.7",
+  "version": "1.1.8",
   "description": "ESLint config for Simply Made Apps",
   "homepage": "https://github.com/simplymadeapps/eslint-config-simplymadeapps",
   "license": "MIT",
@@ -13,6 +13,7 @@
     "eslint-config-prettier": "^2.9.0",
     "eslint-config-xo": "^0.22.2",
     "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-jsdoc": "^15.9.1",
     "eslint-plugin-prettier": "^2.6.0",
     "eslint-plugin-react": "^7.9.1",
     "eslint-plugin-sort-class-members": "^1.3.1",
