--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "eslint-config-simplymadeapps",
-  "version": "1.4.1",
+  "version": "1.4.2",
   "description": "ESLint config for Simply Made Apps",
   "homepage": "https://github.com/simplymadeapps/eslint-config-simplymadeapps",
   "license": "MIT",
+  "files": [
+    "index.js"
+  ],
   "main": "index.js",
   "repository": {
     "type": "git",
