--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-config-simplymadeapps",
-  "version": "1.4.3",
+  "version": "1.5.0",
   "description": "ESLint config for Simply Made Apps",
   "homepage": "https://github.com/simplymadeapps/eslint-config-simplymadeapps",
   "license": "MIT",
@@ -21,9 +21,9 @@
     "eslint-plugin-react": "^7.17.0",
     "eslint-plugin-sort-class-members": "^1.6.0",
     "eslint-plugin-unicorn": "^14.0.1",
-    "prettier": "^1.19.1"
   },
   "peerDependencies": {
-    "eslint": ">=6.7.2"
+    "eslint": ">=6.7.2",
+    "prettier": ">=1.19.1"
   }
 }
