--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-config-simplymadeapps",
-  "version": "1.5.5",
+  "version": "1.5.6",
   "description": "ESLint config for Simply Made Apps",
   "homepage": "https://github.com/simplymadeapps/eslint-config-simplymadeapps",
   "license": "MIT",
@@ -26,6 +26,7 @@
     "typescript": "^3.9.5"
   },
   "peerDependencies": {
+    "babel-eslint": ">=10.1.0",
     "eslint": ">=6.7.2",
     "prettier": ">=1.19.1"
   }
